Optimized computation of runtime classpath.
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sca@662174 13f79535-47bb-0310-9956-ffa450edef68